--- a/cloudformation/my-template.yml
+++ b/cloudformation/my-template.yml
@@ -1,2 +1,8 @@
-MattMattMattBucket:
+AWSTemplateFormatVersion: '2010-09-09'
+Description: create a single S3 bucket
+
+Resources:
+  MyBucket:
     Type: AWS::S3::Bucket
+    Properties:
+      BucketName: sample-bucket-0827-cc
